syntax = "proto3";

package GrpcDemoSrv;

option go_package = "./proto;GrpcDemoSrv";

service GrpcDemoSrv {
  rpc GrpcCall(CallRequest) returns (CallResponse) {}
}

message CallRequest {
  string name = 1;
}

message CallResponse {
  string msg = 1;
}
